tests/ui/macros/macro-use-bad-args-1.rs
#![no_std]

#[macro_use(foo(bar))]  //~ ERROR malformed `macro_use` attribute input
extern crate std;

fn main() {}
